@@ -71,6 +71,9 @@ xx/xx/2005 - 1.12.2-WIP
 	  starting to clone or restore.  (Szaka)
 	- Change @type parameter for ntfs_create() to be dev_t rather than
 	  internal NTFS_DT_* constants.  (Yura)
+	- Teech ntfs_create() to create special Interix files (charcter and
+	  block devices, FIFOs and sockets). Add @dev parameter to ntfs_create()
+	  for this.  (Yura)
 
 10/10/2005 - 1.12.1 - Minor fix to location of mount.ntfs-fuse and mkfs.ntfs.
 
